feat: Upgrade JDK compatible version, refactored project.